syntax = "proto3";
package permission;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

/* Used by clients to set permission.
 * Next Id: 9 */
message WritePermissionRequest {
  string accessorId = 1;
  string resourceId = 2;
  DBEntity accessor = 3;
  DBEntity resource = 4;
  PermissionOp operation = 5;
}

/* Returned to clients after set permission request.
 * Next Id: 2 */
message GetPermissionResponse {
  Permission permission = 1;
}

/* Generic permission data.
 * Next Id: 9 */
message Permission {
  google.protobuf.StringValue id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string accessorId = 4;
  google.protobuf.StringValue resourceId = 5;
  DBEntity accessor = 6;
  DBEntity resource = 7;
  PermissionOp operation = 8;
}

/* Possible operations which could be applied to a resource.
 * Next Id: 6 */
enum PermissionOp {
  NONE = 0;
  // Can only read the data.
  READ = 1;
  // Can read, but has limited write.
  REVIEW = 2;
  // Can read, create, and update the entity.
  WRITE = 3;
  // Can read, create, update, and delete the entity.
  ALL = 4;
}

/* Firebase entities which could be accessors or resources. */
enum DBEntity {
  // Account entities.

  USER = 0;
  ADDRESS = 1;
  JOB_ROLE = 2;
  TEAM = 3;
  ORG = 4;
  CLIENT = 5;
  ROOT = 6;

  // Catalog entities.

  OPEN_DEFINITION = 20;
  CORE_DEFINITION = 21;
  INVENTORY_BATCH = 22;
  DISTRIBUTION_OUTLET = 23;
  OUTLET_ADDRESS = 24;
  PRODUCT = 25;
  ALLOW_LIST = 26;
  COMPANY = 27;

  // Operations entities.

  PACKAGE = 40;
  ORDER = 41;
  DELIVERY_ITEM = 42;
  TEMPLATE = 43;
  TRIGGER = 44;
  TARGET = 45;
  BUNDLE = 46;

  // Billing entities.

  BILLING_CYCLE = 60;

  // Proposals
  PROPOSAL = 100;
  COMMENT_THREAD = 101;
  COMMENT_MESSAGE = 102;
  PROPOSAL_REVIEW = 103;
}
